--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 <title>SM StoryBook</title>
+<link rel="icon" href="2sm.png" type="image/gif" sizes="16x16">
 
 </head>
 <meta charset="utf-8" /> 
@@ -484,4 +485,5 @@ function openCity(evt, cityName) {
   evt.currentTarget.className += " active";
 }
 </script>
+	</html>
    
